--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "description": "Un coso pa escucha radios",
-  "homepage_url": "http://extensionizr.com",
+  "homepage_url": "https://github.com/todoesverso/todoesradio",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -23,5 +23,5 @@
     "default_title": "todoesradios",
     "default_popup": "src/popup/index.html"
   },
-  "permissions": ["tabs", "storage"]
+  "permissions": ["storage"]
 }
